# fstrings-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: main.rs  readme.rs
proc_macro/: Cargo.toml  macros.rs  mod.rs
src/: lib.rs
src/proc_macro/: Cargo.toml  macros.rs  mod.rs
tests/: format.rs
