[package]
name = "fstrings"
version = "0.2.2"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

license = "MIT"

documentation = "https://docs.rs/fstrings"
repository = "https://github.com/danielhenrymantilla/fstrings-rs"
homepage = "https://crates.io/crates/fstrings"

readme = "README.md"
description = "Python3 fstring interpolation in Rust"
keywords = ["python", "format", "human", "no_std", "interpolation"]
categories = ["rust-patterns", ]

[dependencies]
proc-macro-hack = "0.5.11"

[dependencies.proc-macro]
version = "0.2.2"
package = "fstrings-proc-macro"
path = "src/proc_macro"

[features]
default = []

nightly = []
verbose-expansions = ["proc-macro/verbose-expansions", ]

[package.metadata.docs.rs]
features = ["nightly", ]
