[package]
name = "fstrings"
version = "1.0.0"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

license = "MIT"

documentation = "https://docs.rs/fstrings"
repository = "https://github.com/danielhenrymantilla/fstrings-rs.git"
homepage = "https://crates.io/crates/fstrings"

readme = "README.md"
description = "Python3 fstring interpolation in Rust"
keywords = ["python", "format", "human", "no_std", "interpolation"]
categories = ["rust-patterns", ]

[workspace]
members = ["src/proc_macro"]

[dependencies]
proc-macro-hack = "0.5.19"

[dependencies.fstrings-proc-macro]
version = "1.0.0"
path = "src/proc_macro"

[features]
default = []

nightly = []
verbose-expansions = ["fstrings-proc-macro/verbose-expansions", ]

[package.metadata.docs.rs]
features = ["nightly", ]
