[lib]
proc-macro = true
path = "mod.rs"

[package]
name = "fstrings-proc-macro"
version = "0.1.3"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

description = "Python3 fstring interpolation in Rust"
license = "MIT"

[dependencies]
proc-macro2 = "0.4.30"
proc-macro-hack = "0.5.8"
proc-quote = "0.2.2"
syn = "0.15.42"

[features]
verbose-expansions = ["syn/extra-traits", ]
